@@ -15,6 +15,7 @@ import com.sos.commons.httpclient.commons.mulitpart.HttpFormDataCloseable;
 import com.sos.commons.httpclient.commons.mulitpart.formdata.FormDataFile;
 import com.sos.commons.httpclient.commons.mulitpart.formdata.FormDataString;
 import com.sos.commons.util.http.HttpUtils;
+import com.sos.commons.util.keystore.KeyStoreArguments;
 import com.sos.js7.job.Job;
 import com.sos.js7.job.JobArgument;
 import com.sos.js7.job.OrderProcessStep;
@@ -40,586 +41,647 @@ import net.thisptr.jackson.jq.Versions;
 
 public class RESTClientJob extends Job<RestJobArguments> {
 
-    public static final ObjectMapper objectMapper;
-    private BaseHttpClient client;
-    private static final Scope rootScope = Scope.newEmptyScope();
+	public static final ObjectMapper objectMapper;
+	private BaseHttpClient client;
+	private static final Scope rootScope = Scope.newEmptyScope();
 
-    public RESTClientJob(JobContext jobContext) {
-        super(jobContext);
-    }
+	public RESTClientJob(JobContext jobContext) {
+		super(jobContext);
+	}
 
-    public void processOrder(OrderProcessStep<RestJobArguments> step) throws Exception {
+	public void processOrder(OrderProcessStep<RestJobArguments> step) throws Exception {
 
-        CredentialStoreArguments csArgs = step.getIncludedArguments(CredentialStoreArguments.class);
-        CredentialStoreResolver resolver = csArgs.newResolver();
+		CredentialStoreArguments csArgs = step.getIncludedArguments(CredentialStoreArguments.class);
+		CredentialStoreResolver resolver = csArgs.newResolver();
+		
+		KeyStoreArguments keystoreArgs = step.getIncludedArguments(KeyStoreArguments.class); 
 
-        RestJobArguments myArgs = (RestJobArguments) step.getDeclaredArguments();
-        OrderProcessStepLogger logger = step.getLogger();
+		RestJobArguments myArgs = (RestJobArguments) step.getDeclaredArguments();
+		OrderProcessStepLogger logger = step.getLogger();
 
-        // get logging details for info level
-        boolean logReqHeaders = false;
-        boolean logReqBody = false;
-        boolean logResHeaders = false;
-        boolean logResBody = false;
+		// get logging details for info level
+		boolean logReqHeaders = false;
+		boolean logReqBody = false;
+		boolean logResHeaders = false;
+		boolean logResBody = false;
 
-        String infoLogging = myArgs.getLogItems().getValue();
+		String infoLogging = myArgs.getLogItems().getValue();
 
-        if (infoLogging != null && !infoLogging.equalsIgnoreCase("none")) {
-            String[] parts = infoLogging.split(";");
-            for (String part : parts) {
-                String[] split = part.split(":");
-                String target = split[0].trim().toLowerCase(); // request or response
+		if (infoLogging != null && !infoLogging.equalsIgnoreCase("none")) {
+			String[] parts = infoLogging.split(";");
+			for (String part : parts) {
+				String[] split = part.split(":");
+				String target = split[0].trim().toLowerCase(); // request or response
 
-                // Default = log both headers and body
-                Set<String> items = new HashSet<>();
-                if (split.length > 1) {
-                    for (String item : split[1].split(",")) {
-                        items.add(item.trim().toLowerCase());
-                    }
-                } else {
-                    items.add("headers");
-                    items.add("body");
-                }
+				// Default = log both headers and body
+				Set<String> items = new HashSet<>();
+				if (split.length > 1) {
+					for (String item : split[1].split(",")) {
+						items.add(item.trim().toLowerCase());
+					}
+				} else {
+					items.add("headers");
+					items.add("body");
+				}
 
-                // Apply flags
-                if ("request".equals(target)) {
-                    if (items.contains("headers"))
-                        logReqHeaders = true;
-                    if (items.contains("body"))
-                        logReqBody = true;
-                } else if ("response".equals(target)) {
-                    if (items.contains("headers"))
-                        logResHeaders = true;
-                    if (items.contains("body"))
-                        logResBody = true;
-                }
-            }
-        }
+				// Apply flags
+				if ("request".equals(target)) {
+					if (items.contains("headers"))
+						logReqHeaders = true;
+					if (items.contains("body"))
+						logReqBody = true;
+				} else if ("response".equals(target)) {
+					if (items.contains("headers"))
+						logResHeaders = true;
+					if (items.contains("body"))
+						logResBody = true;
+				}
+			}
+		}
+		
+		//analysing the request json to get the details for rest call
+		String requestJson = (String) myArgs.getMyRequest().getValue();
+		if (requestJson != null && !requestJson.isBlank()) {
+			JsonNode requestNode;
+			try {
+				requestNode = objectMapper.readTree(requestJson);
+			} catch (Exception e) {
+				throw new JobException("Invalid JSON in 'myRequest': " + e.getMessage(), e);
+			}
 
-        // analysing the request json to get the details for rest call
-        String requestJson = (String) myArgs.getMyRequest().getValue();
-        if (requestJson != null && !requestJson.isBlank()) {
-            JsonNode requestNode;
-            try {
-                requestNode = objectMapper.readTree(requestJson);
-            } catch (Exception e) {
-                throw new JobException("Invalid JSON in 'myRequest': " + e.getMessage(), e);
-            }
+			String endpoint = requestNode.has("endpoint") ? requestNode.get("endpoint").asText((String) null) : null;
+			String method = requestNode.has("method") ? requestNode.get("method").asText((String) null) : null;
+			URI uri = endpoint != null ? URI.create(endpoint) : null;
+			
+			if (uri == null) {
+				String jr_uri = Optional.ofNullable(step.getAllArguments().get("url")).map(JobArgument::getValue)
+						.map(Object::toString).orElse("").trim();
+				uri = jr_uri != null ? URI.create(endpoint) : null;
+			}
+			
+			if (uri == null) {
+				throw new JobRequiredArgumentMissingException("Missing or empty 'URL' in request JSON.");
+			} else {
+				String bodyStr = null;
+				try (HttpFormDataCloseable formData = new HttpFormDataCloseable()) {
+					if (requestNode.has("body")) {
+						try {
+							JsonNode bodyNode = requestNode.get("body");
+							if (bodyNode != null) {
+								bodyStr = objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(bodyNode);
+								if (logReqBody)
+									logger.info("Request Body :" + bodyStr);
+								logger.debug("Request Body :" + bodyStr);
+							}
+						} catch (Exception e) {
+							throw new JobException("Failed to extract 'body' from request JSON: " + e);
+						}
+					} else if (requestNode.has("formData")) {
+						JsonNode formDataNode = requestNode.get("formData");
+						if (formDataNode != null) {
+							if (logReqBody) {
+								logger.info("Request Body as formData :" + objectMapper.writerWithDefaultPrettyPrinter()
+										.writeValueAsString(formDataNode));
+							}
+							logger.debug("Request Body as formData:"
+									+ objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(formDataNode));
+						}
+						if (formDataNode == null || !formDataNode.isObject()) {
+							throw new IllegalArgumentException("Missing or invalid 'formData' object in request JSON");
+						}
 
-            String endpoint = requestNode.has("endpoint") ? requestNode.get("endpoint").asText((String) null) : null;
-            String method = requestNode.has("method") ? requestNode.get("method").asText((String) null) : null;
-            URI uri = endpoint != null ? URI.create(endpoint) : null;
+						Iterator<Map.Entry<String, JsonNode>> fields = formDataNode.fields();
+						while (fields.hasNext()) {
+							Map.Entry<String, JsonNode> field = fields.next();
+							String key = field.getKey();
+							JsonNode valueNode = field.getValue();
 
-            if (uri == null) {
-                String jr_uri = Optional.ofNullable(step.getAllArguments().get("url")).map(JobArgument::getValue).map(Object::toString).orElse("")
-                        .trim();
-                uri = jr_uri != null ? URI.create(endpoint) : null;
-            }
+							// Special handling for "file"
+							if ("file".equalsIgnoreCase(key)) {
+								Path filePath = Paths.get(valueNode.asText());
 
-            if (uri == null) {
-                throw new JobRequiredArgumentMissingException("Missing or empty 'URL' in request JSON.");
-            } else {
-                String bodyStr = null;
-                try (HttpFormDataCloseable formData = new HttpFormDataCloseable()) {
-                    if (requestNode.has("body")) {
-                        try {
-                            JsonNode bodyNode = requestNode.get("body");
-                            if (bodyNode != null) {
-                                bodyStr = objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(bodyNode);
-                                if (logReqBody)
-                                    logger.info("Request Body :" + bodyStr);
-                                logger.debug("Request Body :" + bodyStr);
-                            }
-                        } catch (Exception e) {
-                            throw new JobException("Failed to extract 'body' from request JSON: " + e);
-                        }
-                    } else if (requestNode.has("formData")) {
-                        JsonNode formDataNode = requestNode.get("formData");
-                        if (formDataNode != null) {
-                            if (logReqBody) {
-                                logger.info("Request Body as formData :" + objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(
-                                        formDataNode));
-                            }
-                            logger.debug("Request Body as formData:" + objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(
-                                    formDataNode));
-                        }
-                        if (formDataNode == null || !formDataNode.isObject()) {
-                            throw new IllegalArgumentException("Missing or invalid 'formData' object in request JSON");
-                        }
+								if (!Files.exists(filePath) || !Files.isRegularFile(filePath)) {
+									throw new JobException(
+											"File not found or invalid at path: " + filePath.toAbsolutePath());
+								}
 
-                        Iterator<Map.Entry<String, JsonNode>> fields = formDataNode.fields();
-                        while (fields.hasNext()) {
-                            Map.Entry<String, JsonNode> field = fields.next();
-                            String key = field.getKey();
-                            JsonNode valueNode = field.getValue();
+								// Determine content type
+								String format = formDataNode.has("format") ? formDataNode.get("format").asText() : "";
+								String contentType;
 
-                            // Special handling for "file"
-                            if ("file".equalsIgnoreCase(key)) {
-                                Path filePath = Paths.get(valueNode.asText());
+								if ("TAR_GZ".equalsIgnoreCase(format)) {
+									contentType = HttpFormData.CONTENT_TYPE_GZIP; // application/gzip
+								} else {
+									// Detect content type from file extension
+									String fileName = filePath.getFileName().toString().toLowerCase();
 
-                                if (!Files.exists(filePath) || !Files.isRegularFile(filePath)) {
-                                    throw new JobException("File not found or invalid at path: " + filePath.toAbsolutePath());
-                                }
+									if (fileName.endsWith(".xml")) {
+										contentType = "application/xml";
+									} else if (fileName.endsWith(".xlsx")) {
+										contentType = "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet";
+									} else if (fileName.endsWith(".zip")) {
+										contentType = HttpFormData.CONTENT_TYPE_ZIP; // application/zip
+									} else {
+										// Try Java’s built-in detection first
+										contentType = Files.probeContentType(filePath);
+										if (contentType == null) {
+											contentType = "application/octet-stream"; // safe fallback
+										}
+									}
+								}
 
-                                // Determine content type
-                                String format = formDataNode.has("format") ? formDataNode.get("format").asText() : "";
-                                String contentType;
+								// Add the file part
+								formData.addPart(new FormDataFile(key, filePath.getFileName().toString(), filePath,
+										contentType));
+							}
+							// For all other keys → treat as normal form string
+							else {
+								String value = valueNode.asText();
+								formData.addPart(new FormDataString(key, value));
+							}
+						}
+					}
+					
+					//maping all the request headers
+					Map<String, String> headerMap = new HashMap<>();
 
-                                if ("TAR_GZ".equalsIgnoreCase(format)) {
-                                    contentType = HttpFormData.CONTENT_TYPE_GZIP; // application/gzip
-                                } else {
-                                    // Detect content type from file extension
-                                    String fileName = filePath.getFileName().toString().toLowerCase();
+					String username = Optional.ofNullable(step.getAllArguments().get("username"))
+							.map(JobArgument::getValue).map(Object::toString).orElse("").trim();
 
-                                    if (fileName.endsWith(".xml")) {
-                                        contentType = "application/xml";
-                                    } else if (fileName.endsWith(".xlsx")) {
-                                        contentType = "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet";
-                                    } else if (fileName.endsWith(".zip")) {
-                                        contentType = HttpFormData.CONTENT_TYPE_ZIP; // application/zip
-                                    } else {
-                                        // Try Java’s built-in detection first
-                                        contentType = Files.probeContentType(filePath);
-                                        if (contentType == null) {
-                                            contentType = "application/octet-stream"; // safe fallback
-                                        }
-                                    }
-                                }
+					String password = Optional.ofNullable(step.getAllArguments().get("password"))
+							.map(JobArgument::getValue).map(Object::toString).orElse("").trim();
 
-                                // Add the file part
-                                formData.addPart(new FormDataFile(key, filePath.getFileName().toString(), filePath, contentType));
-                            }
-                            // For all other keys → treat as normal form string
-                            else {
-                                String value = valueNode.asText();
-                                formData.addPart(new FormDataString(key, value));
-                            }
-                        }
-                    }
+					if (!username.isBlank() && !password.isBlank()) {
 
-                    // maping all the request headers
-                    Map<String, String> headerMap = new HashMap<>();
+						String enc_path = Optional
+								.ofNullable(step.getAllArguments().get("encipherment_private_key_path"))
+								.map(JobArgument::getValue).map(Object::toString).orElse("").trim();
+						if (username.startsWith("enc:")) {
+							username = EnciphermentDecryptor.decryptValue(username, Paths.get(enc_path));
+						}
+						if (password.startsWith("enc:")) {
+							password = EnciphermentDecryptor.decryptValue(password, Paths.get(enc_path));
+						}
 
-                    String username = Optional.ofNullable(step.getAllArguments().get("username")).map(JobArgument::getValue).map(Object::toString)
-                            .orElse("").trim();
+						logger.debug("Reading username and password from the Credential Store.");
+						String resolvedUsername = resolver.resolve(username);
+						String resolvedPassword = resolver.resolve(password);
 
-                    String password = Optional.ofNullable(step.getAllArguments().get("password")).map(JobArgument::getValue).map(Object::toString)
-                            .orElse("").trim();
+						String credentials = resolvedUsername + ":" + resolvedPassword;
+						String encodedAuth = Base64.getEncoder()
+								.encodeToString(credentials.getBytes(StandardCharsets.UTF_8));
 
-                    if (!username.isBlank() && !password.isBlank()) {
+						headerMap.put("Authorization", "Basic " + encodedAuth);
+					}
 
-                        String enc_path = Optional.ofNullable(step.getAllArguments().get("encipherment_private_key_path")).map(JobArgument::getValue)
-                                .map(Object::toString).orElse("").trim();
-                        if (username.startsWith("enc:")) {
-                            username = EnciphermentDecryptor.decryptValue(username, Paths.get(enc_path));
-                        }
-                        if (password.startsWith("enc:")) {
-                            password = EnciphermentDecryptor.decryptValue(password, Paths.get(enc_path));
-                        }
+					if (requestNode.has("headers") && requestNode.get("headers").isArray()) {
+						for (JsonNode headerNode : requestNode.get("headers")) {
+							if (headerNode.has("key") && headerNode.has("value")) {
+								String key = headerNode.get("key").asText();
+								String value = headerNode.get("value").asText();
+								headerMap.put(key, value);
+							}
+						}
+					}
+					if (!headerMap.isEmpty()) {
+						StringBuilder headerLog = new StringBuilder("Request Headers:\n");
+						headerMap.forEach((key, value) -> headerLog.append("  ").append(key).append(": ").append(value)
+								.append("\n"));
+						if (logReqHeaders)
+							logger.info(headerLog.toString().trim());
+					}
 
-                        logger.debug("Reading username and password from the Credential Store.");
-                        String resolvedUsername = resolver.resolve(username);
-                        String resolvedPassword = resolver.resolve(password);
+					logger.debug("initiate REST api client");
+					BaseHttpClient.Builder builder = BaseHttpClient.withBuilder().withLogger(logger)
+							.withConnectTimeout(Duration.ofSeconds(30L));
 
-                        String credentials = resolvedUsername + ":" + resolvedPassword;
-                        String encodedAuth = Base64.getEncoder().encodeToString(credentials.getBytes(StandardCharsets.UTF_8));
+					if (uri.toString().toLowerCase().startsWith("https:")) {
+						logger.info("calling getsslArguments");
+						builder.withSSL(JobSslConfigUtils.getSslArguments(step));
+						logger.info("got results!!!");
+					}
 
-                        headerMap.put("Authorization", "Basic " + encodedAuth);
-                    }
+					this.client = builder.build();
 
-                    if (requestNode.has("headers") && requestNode.get("headers").isArray()) {
-                        for (JsonNode headerNode : requestNode.get("headers")) {
-                            if (headerNode.has("key") && headerNode.has("value")) {
-                                String key = headerNode.get("key").asText();
-                                String value = headerNode.get("value").asText();
-                                headerMap.put(key, value);
-                            }
-                        }
-                    }
-                    if (!headerMap.isEmpty()) {
-                        StringBuilder headerLog = new StringBuilder("Request Headers:\n");
-                        headerMap.forEach((key, value) -> headerLog.append("  ").append(key).append(": ").append(value).append("\n"));
-                        if (logReqHeaders)
-                            logger.info(headerLog.toString().trim());
-                    }
+					try {
+						HttpExecutionResult<byte[]> result = null;
+						// this part will be updated when I've the idea what will happen when header=null is passed
+						if (method != null && !method.trim().isEmpty()) {
+							if (method.equalsIgnoreCase("post")) {
+								if (requestNode.has("formData")) {
+									headerMap.put(HttpUtils.HEADER_CONTENT_TYPE, formData.getContentType());
+									result = client.executePOST(uri, headerMap,
+											formData == null ? HttpRequest.BodyPublishers.noBody()
+													: HttpRequest.BodyPublishers.ofByteArrays(formData),
+											HttpResponse.BodyHandlers.ofByteArray());
+								} else {
+									result = client.executePOST(uri, headerMap,
+											bodyStr == null ? HttpRequest.BodyPublishers.noBody()
+													: HttpRequest.BodyPublishers.ofString(bodyStr),
+											HttpResponse.BodyHandlers.ofByteArray());
+								}
+							} else if (method.equalsIgnoreCase("put")) {
+								if (requestNode.has("formData")) {
+									headerMap.put(HttpUtils.HEADER_CONTENT_TYPE, formData.getContentType());
+									result = client.executePUT(uri, headerMap,
+											formData == null ? HttpRequest.BodyPublishers.noBody()
+													: HttpRequest.BodyPublishers.ofByteArrays(formData),
+											HttpResponse.BodyHandlers.ofByteArray());
+								} else {
+									// when url, header body=string is present-
+									result = client.executePUT(uri, headerMap,
+											bodyStr == null ? HttpRequest.BodyPublishers.noBody()
+													: HttpRequest.BodyPublishers.ofString(bodyStr),
+											HttpResponse.BodyHandlers.ofByteArray());
+								}
+							} else if (method.equalsIgnoreCase("get")) {
+								if (!headerMap.isEmpty()) {
+									// when url and headers are present
+									result = client.executeGET(uri, headerMap, HttpResponse.BodyHandlers.ofByteArray());
+								} else {
+									// only url is present - this will be removed if the header=null will also send
+									// the rest call without issue from the internal code side and request sent to
+									// the server
+									result = client.executeGET(uri, HttpResponse.BodyHandlers.ofByteArray());
+								}
+							} else if (method.equalsIgnoreCase("delete")) {
+								if (!headerMap.isEmpty()) {
+									// when url and headers are present
+									result = client.executeDELETE(uri, headerMap,
+											HttpResponse.BodyHandlers.ofByteArray());
+								} else {
+									// only url is present - this will be removed if the header=null will also send
+									// the rest call without issue from the internal code side and request sent to
+									// the server
+									result = client.executeDELETE(uri, HttpResponse.BodyHandlers.ofByteArray());
+								}
+							} else {
+								throw new JobArgumentException("Unknown http method: " + method);
+							}
+						} else {
+							throw new JobArgumentException(
+									"Http Method (POST, PUT, GET, DELETE) missing. Request cannot be executed.");
+						}
 
-                    logger.debug("initiate REST api client");
-                    BaseHttpClient.Builder builder = BaseHttpClient.withBuilder().withLogger(logger).withConnectTimeout(Duration.ofSeconds(30L));
+						int statusCode = -1;
+						if (result != null && result.response() != null) {
+							statusCode = result.response().statusCode();
+						}
+						if (statusCode >= 200 && statusCode < 300) {
+							logger.info("REST call successful. Status Code: " + statusCode);
+						} else {
+							throw new JobException("REST call unsuccessful. Status code: " + statusCode);
+						}
 
-                    if (uri.toString().toLowerCase().startsWith("https:")) {
-                        logger.info("calling getsslArguments");
-                        builder.withSSL(JobResourceUtils.getSslArguments(step));
-                        logger.info("got results!!!");
-                    }
+						HttpResponse<byte[]> response = result.response();
 
-                    this.client = builder.build();
+						//mapping response headers
+						Map<String, String> resHeaders = response.headers().map().entrySet().stream().collect(
+								Collectors.toMap(Map.Entry::getKey, (entryx) -> String.join(", ", entryx.getValue())));
+						String contentType = null;
+						for (Map.Entry<String, String> entry : resHeaders.entrySet()) {
+							if ("content-type".equalsIgnoreCase((String) entry.getKey())) {
+								contentType = (String) entry.getValue();
+								break;
+							}
+						}
 
-                    try {
-                        HttpExecutionResult<byte[]> result = null;
-                        // this part will be updated when I've the idea what will happen when header=null is passed
-                        if (method != null && !method.trim().isEmpty()) {
-                            if (method.equalsIgnoreCase("post")) {
-                                if (requestNode.has("formData")) {
-                                    headerMap.put(HttpUtils.HEADER_CONTENT_TYPE, formData.getContentType());
-                                    result = client.executePOST(uri, headerMap, formData == null ? HttpRequest.BodyPublishers.noBody()
-                                            : HttpRequest.BodyPublishers.ofByteArrays(formData), HttpResponse.BodyHandlers.ofByteArray());
-                                } else {
-                                    result = client.executePOST(uri, headerMap, bodyStr == null ? HttpRequest.BodyPublishers.noBody()
-                                            : HttpRequest.BodyPublishers.ofString(bodyStr), HttpResponse.BodyHandlers.ofByteArray());
-                                }
-                            } else if (method.equalsIgnoreCase("put")) {
-                                if (requestNode.has("formData")) {
-                                    headerMap.put(HttpUtils.HEADER_CONTENT_TYPE, formData.getContentType());
-                                    result = client.executePUT(uri, headerMap, formData == null ? HttpRequest.BodyPublishers.noBody()
-                                            : HttpRequest.BodyPublishers.ofByteArrays(formData), HttpResponse.BodyHandlers.ofByteArray());
-                                } else {
-                                    // when url, header body=string is present-
-                                    result = client.executePUT(uri, headerMap, bodyStr == null ? HttpRequest.BodyPublishers.noBody()
-                                            : HttpRequest.BodyPublishers.ofString(bodyStr), HttpResponse.BodyHandlers.ofByteArray());
-                                }
-                            } else if (method.equalsIgnoreCase("get")) {
-                                if (!headerMap.isEmpty()) {
-                                    // when url and headers are present
-                                    result = client.executeGET(uri, headerMap, HttpResponse.BodyHandlers.ofByteArray());
-                                } else {
-                                    // only url is present - this will be removed if the header=null will also send
-                                    // the rest call without issue from the internal code side and request sent to
-                                    // the server
-                                    result = client.executeGET(uri, HttpResponse.BodyHandlers.ofByteArray());
-                                }
-                            } else if (method.equalsIgnoreCase("delete")) {
-                                if (!headerMap.isEmpty()) {
-                                    // when url and headers are present
-                                    result = client.executeDELETE(uri, headerMap, HttpResponse.BodyHandlers.ofByteArray());
-                                } else {
-                                    // only url is present - this will be removed if the header=null will also send
-                                    // the rest call without issue from the internal code side and request sent to
-                                    // the server
-                                    result = client.executeDELETE(uri, HttpResponse.BodyHandlers.ofByteArray());
-                                }
-                            } else {
-                                throw new JobArgumentException("Unknown http method: " + method);
-                            }
-                        } else {
-                            throw new JobArgumentException("Http Method (POST, PUT, GET, DELETE) missing. Request cannot be executed.");
-                        }
+						if (!resHeaders.isEmpty()) {
+							StringBuilder headerLog = new StringBuilder("Response Headers:\n");
+							resHeaders.forEach((key, value) -> headerLog.append("  ").append(key).append(": ")
+									.append(value).append("\n"));
+							if (logResHeaders)
+								logger.info(headerLog.toString().trim());
+						}
+						
+						//fetching response body
+						String responseBody = null;
+						if (contentType != null && (contentType.contains("application/json")
+								|| contentType.toLowerCase().startsWith("text/"))) {
+							responseBody = new String(response.body(), java.nio.charset.StandardCharsets.UTF_8);
+							if (contentType.contains("application/json") && !responseBody.trim().isEmpty()) {
+								Object json = objectMapper.readValue(responseBody, Object.class);
+								if (logResBody)
+									logger.info("Response Body: "
+											+ objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(json));
+								logger.debug("Response Body: "
+										+ objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(json));
+							} else if (!responseBody.trim().isEmpty()) {
+								if (logResBody)
+									logger.info("Response Body : \n" + responseBody);
+								logger.debug("Response Body : \n" + responseBody);
+							}
+						}
 
-                        int statusCode = -1;
-                        if (result != null && result.response() != null) {
-                            statusCode = result.response().statusCode();
-                        }
-                        if (statusCode >= 200 && statusCode < 300) {
-                            logger.info("REST call successful. Status Code: " + statusCode);
-                        } else {
-                            throw new JobException("REST call unsuccessful. Status code: " + statusCode);
-                        }
+						// Return Variable
+						String jqQuery = null;
+						String pI = null;
+						String filePath = null;
+						String returnVarJson = (String) myArgs.getReturnVariable().getValue();
+						String path = null;
+						String name = null;
+						String inputOption = null;
+						boolean rawOutput = false;
 
-                        HttpResponse<byte[]> response = result.response();
+						// Return variable -check if return variable is available or not
+						if (returnVarJson != null && !returnVarJson.trim().isEmpty()) {
+							JsonNode returnVars;
+							try {
+								returnVars = objectMapper.readTree(returnVarJson);
+							} catch (Exception e) {
+								throw new JobException("Invalid JSON in 'return_variable': " + e.getMessage(), e);
+							}
+							
+							if (returnVars.isArray()) {
 
-                        // mapping response headers
-                        Map<String, String> resHeaders = response.headers().map().entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, (
-                                entryx) -> String.join(", ", entryx.getValue())));
-                        String contentType = null;
-                        for (Map.Entry<String, String> entry : resHeaders.entrySet()) {
-                            if ("content-type".equalsIgnoreCase((String) entry.getKey())) {
-                                contentType = (String) entry.getValue();
-                                break;
-                            }
-                        }
+								ReturnVariableUtils.checkDuplicateReturnVariable(returnVars);
+								for (JsonNode mappingNode : returnVars) {
+									jqQuery = null;
+									pI = null;
+									filePath = null;
+									name = null;
+									path = null;
+									inputOption = null;
+									rawOutput = false;
 
-                        if (!resHeaders.isEmpty()) {
-                            StringBuilder headerLog = new StringBuilder("Response Headers:\n");
-                            resHeaders.forEach((key, value) -> headerLog.append("  ").append(key).append(": ").append(value).append("\n"));
-                            if (logResHeaders)
-                                logger.info(headerLog.toString().trim());
-                        }
+									name = mappingNode.has("name") ? mappingNode.get("name").asText().trim() : null;
+									path = mappingNode.has("path") ? mappingNode.get("path").asText().trim() : null;
 
-                        // fetching response body
-                        String responseBody = null;
-                        if (contentType != null && (contentType.contains("application/json") || contentType.toLowerCase().startsWith("text/"))) {
-                            responseBody = new String(response.body(), java.nio.charset.StandardCharsets.UTF_8);
-                            if (contentType.contains("application/json") && !responseBody.trim().isEmpty()) {
-                                Object json = objectMapper.readValue(responseBody, Object.class);
-                                if (logResBody)
-                                    logger.info("Response Body: " + objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(json));
-                                logger.debug("Response Body: " + objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(json));
-                            } else if (!responseBody.trim().isEmpty()) {
-                                if (logResBody)
-                                    logger.info("Response Body : \n" + responseBody);
-                                logger.debug("Response Body : \n" + responseBody);
-                            }
-                        }
+									// check if the JSON object have both name and path
+									if (name != null && !name.isBlank() && path != null && !path.isBlank()) {
+										String inputType = "json"; // default
 
-                        // Return Variable
-                        String jqQuery = null;
-                        String pI = null;
-                        String filePath = null;
-                        String returnVarJson = (String) myArgs.getReturnVariable().getValue();
-                        String path = null;
-                        String name = null;
-                        String inputOption = null;
-                        boolean rawOutput = false;
+										if (path.startsWith("<")) {
+											int firstSeparator = path.indexOf("||");
 
-                        // Return variable -check if return variable is available or not
-                        if (returnVarJson != null && !returnVarJson.trim().isEmpty()) {
-                            JsonNode returnVars;
-                            try {
-                                returnVars = objectMapper.readTree(returnVarJson);
-                            } catch (Exception e) {
-                                throw new JobException("Invalid JSON in 'return_variable': " + e.getMessage(), e);
-                            }
+											if (firstSeparator == -1 && !path.matches("^<\\s*plain\\s*:??\\s*$")) {
+												throw new JobArgumentException("Could not create return variable: "
+														+ name
+														+ ". Invalid path format: Missing '||' after input option or unknown input type: "
+														+ path);
+											}
 
-                            if (returnVars.isArray()) {
+											if (firstSeparator != -1) {
+												String inputSegment = path.substring(1, firstSeparator).trim(); // skip '<'
+												path = path.substring(firstSeparator + 2).trim(); // rest: jq or file ops or both
 
-                                ReturnVariableUtils.checkDuplicateReturnVariable(returnVars);
-                                for (JsonNode mappingNode : returnVars) {
-                                    jqQuery = null;
-                                    pI = null;
-                                    filePath = null;
-                                    name = null;
-                                    path = null;
-                                    inputOption = null;
-                                    rawOutput = false;
+												if (inputSegment.startsWith("plain:")) {
+													inputType = "plain";
+													inputOption = inputSegment.substring("plain:".length()).trim();
+												} else if (inputSegment.startsWith("json:")) {
+													inputType = "json";
+													inputOption = inputSegment.substring("json:".length()).trim();
+												} else if (inputSegment.matches("^plain\\s*:??\\s*")) {
+													inputType = "plain";
+													inputOption = "--response-body";
+												} else {
+													inputOption = inputSegment;
+												}
+												if (inputOption.isEmpty()) {
+													inputOption = "--response-body";
+												}
 
-                                    name = mappingNode.has("name") ? mappingNode.get("name").asText().trim() : null;
-                                    path = mappingNode.has("path") ? mappingNode.get("path").asText().trim() : null;
+											} else {
+												// No || after input type, assume just "< plain"
+												inputType = "plain";
+												inputOption = "--response-body";
+												path = ""; // no jq, no PI
+											}
+										} else {
+											// No < at all: default input type and option
+											inputType = "json";
+											inputOption = "--response-body";
+										}
+										// Now handle split into jq query and file ops
+										String[] parts = path.split("\\|\\|", 2);
+										if (parts.length > 0
+												&& ((inputType.equals("plain") && !parts[0].trim().startsWith(">")
+														&& !parts[0].trim().startsWith("-r"))
+														|| inputType.equals("json"))) {
+											jqQuery = parts[0].trim();
+										}
 
-                                    // check if the JSON object have both name and path
-                                    if (name != null && !name.isBlank() && path != null && !path.isBlank()) {
-                                        String inputType = "json"; // default
+										if (parts.length > 1 || (parts.length == 1 && (parts[0].trim().startsWith(">")
+												|| parts[0].trim().startsWith(">>") || parts[0].trim().startsWith("-r")
+												|| parts[0].trim().startsWith("--raw-output")))) {
 
-                                        if (path.startsWith("<")) {
-                                            int firstSeparator = path.indexOf("||");
+											String processorString = (parts.length > 1) ? parts[1].trim()
+													: parts[0].trim();
+											String[] processorParts = processorString.split("\\s+");
 
-                                            if (firstSeparator == -1 && !path.matches("^<\\s*plain\\s*:??\\s*$")) {
-                                                throw new JobArgumentException("Could not create return variable: " + name
-                                                        + ". Invalid path format: Missing '||' after input option or unknown input type: " + path);
-                                            }
+											for (int i = 0; i < processorParts.length; i++) {
+												String token = processorParts[i].trim();
 
-                                            if (firstSeparator != -1) {
-                                                String inputSegment = path.substring(1, firstSeparator).trim(); // skip '<'
-                                                path = path.substring(firstSeparator + 2).trim(); // rest: jq or file ops or both
+												if (token.equals("-r") || token.equals("--raw-output")) {
+													rawOutput = true;
+												} else if ((token.equals(">") || token.equals(">>"))
+														&& i + 1 < processorParts.length) {
+													String potentialFilePath = processorParts[i + 1].trim();
+													if (potentialFilePath.startsWith("-")) {
+														throw new JobArgumentException(
+																"Could not create return variable: " + name
+																		+ ". Invalid file path: found flag instead of file name after '"
+																		+ token + "'");
+													}
+													pI = token;
+													filePath = potentialFilePath;
+													i++;
+												} else if (token.matches("^[A-Za-z]:\\\\.*|^/.*")) {
+													throw new JobArgumentException(
+															"File path provided without Processing Instruction (>, >>): "
+																	+ token);
+												}
+											}
+										}
 
-                                                if (inputSegment.startsWith("plain:")) {
-                                                    inputType = "plain";
-                                                    inputOption = inputSegment.substring("plain:".length()).trim();
-                                                } else if (inputSegment.startsWith("json:")) {
-                                                    inputType = "json";
-                                                    inputOption = inputSegment.substring("json:".length()).trim();
-                                                } else if (inputSegment.matches("^plain\\s*:??\\s*")) {
-                                                    inputType = "plain";
-                                                    inputOption = "--response-body";
-                                                } else {
-                                                    inputOption = inputSegment;
-                                                }
-                                                if (inputOption.isEmpty()) {
-                                                    inputOption = "--response-body";
-                                                }
+										// check if jq is not null
+										if (jqQuery != null && !jqQuery.trim().isEmpty()) {
+											JsonNode jqInput = null;
+											ObjectNode mergedInput = objectMapper.createObjectNode();
+											List<JsonNode> jqResult = null;
+											if (Objects.equals(inputType, "plain")) {
+												if (responseBody != null && !responseBody.trim().isEmpty()) {
+													if (contentType != null
+															&& contentType.toLowerCase().startsWith("text/")) {
+														try {
+															jqInput = objectMapper.readTree("\"" + responseBody + "\"");
+														} catch (Exception e) {
+															throw new JobArgumentException(
+																	"Could not convert plain response body to JSON string: "
+																			+ e.getMessage(),
+																	e);
+														}
+													} else {
+														throw new JobArgumentException(
+																"Response body is not of content type text/*: "
+																		+ contentType);
+													}
+												} else {
+													throw new JobException("Empty Response Body!");
+												}
+												jqResult = ReturnVariableUtils.runJqQuery(jqInput, jqQuery, rootScope,
+														name);
+											} else {
+												List<String> inputOptions = null;
+												if (!inputOption.trim().isEmpty()) {
+													inputOptions = ReturnVariableUtils.parseInputOptions(inputOption);
+												}
+												if (!inputOptions.isEmpty()) {
+													if (responseBody != null && !responseBody.trim().isEmpty()) {
+														if (contentType.contains("application/json")) {
+															jqInput = objectMapper.readTree(responseBody);
+															if (jqInput.isObject()) {
+																mergedInput.setAll((ObjectNode) jqInput);
+															}
+														}
+													}
+													for (String opt : inputOptions) {
+														if (opt.startsWith("--response-body") || opt.startsWith("-b"))
+															continue;
+														else if (opt.startsWith("--response-header")
+																|| opt.startsWith("-s")) {
+															ObjectNode headerObject = objectMapper.createObjectNode();
+															for (Map.Entry<String, String> entry : resHeaders
+																	.entrySet()) {
+																headerObject.put(entry.getKey().toLowerCase(),
+																		entry.getValue());
+															}
+															mergedInput.set("js7ResponseHeader", headerObject);
+														} else if (opt.startsWith("--request-header")
+																|| opt.startsWith("-q")) {
+															ObjectNode headerObject = objectMapper.createObjectNode();
+															for (Map.Entry<String, String> entry : headerMap
+																	.entrySet()) {
+																headerObject.put(entry.getKey().toLowerCase(),
+																		entry.getValue());
+															}
+															mergedInput.set("js7RequestHeader", headerObject);
+														} else if (opt.equals("--request-body") || opt.equals("-d")) {
+															if (bodyStr != null && !bodyStr.trim().isEmpty()) {
+																JsonNode requestBodyJson = objectMapper
+																		.readTree(bodyStr);
+																if (!requestBodyJson.isObject()) {
+																	throw new JobArgumentException(
+																			"Request body must be a JSON object. Found: "
+																					+ requestBodyJson.getNodeType());
+																}
+																mergedInput.set("js7RequestBody", requestBodyJson);
+															} else {
+																throw new JobArgumentException(
+																		"Empty/null Request body.");
+															}
+														} else if (opt.startsWith("--from-json=")
+																|| opt.startsWith("-j=")) {
+															String jsonStr = opt.substring(opt.indexOf('=') + 1).trim();
 
-                                            } else {
-                                                // No || after input type, assume just "< plain"
-                                                inputType = "plain";
-                                                inputOption = "--response-body";
-                                                path = ""; // no jq, no PI
-                                            }
-                                        } else {
-                                            // No < at all: default input type and option
-                                            inputType = "json";
-                                            inputOption = "--response-body";
-                                        }
-                                        // Now handle split into jq query and file ops
-                                        String[] parts = path.split("\\|\\|", 2);
-                                        if (parts.length > 0 && ((inputType.equals("plain") && !parts[0].trim().startsWith(">") && !parts[0].trim()
-                                                .startsWith("-r")) || inputType.equals("json"))) {
-                                            jqQuery = parts[0].trim();
-                                        }
+															// Handle optional quotes
+															if ((jsonStr.startsWith("'") && jsonStr.endsWith("'"))
+																	|| (jsonStr.startsWith("\"")
+																			&& jsonStr.endsWith("\""))) {
+																jsonStr = jsonStr.substring(1, jsonStr.length() - 1);
+															}
 
-                                        if (parts.length > 1 || (parts.length == 1 && (parts[0].trim().startsWith(">") || parts[0].trim().startsWith(
-                                                ">>") || parts[0].trim().startsWith("-r") || parts[0].trim().startsWith("--raw-output")))) {
+															try {
+																JsonNode fromJsonNode = objectMapper.readTree(jsonStr);
 
-                                            String processorString = (parts.length > 1) ? parts[1].trim() : parts[0].trim();
-                                            String[] processorParts = processorString.split("\\s+");
+																if (!fromJsonNode.isObject()) {
+																	throw new JobArgumentException(
+																			"Expected JSON object for --from-json, but found: "
+																					+ fromJsonNode.getNodeType());
+																}
 
-                                            for (int i = 0; i < processorParts.length; i++) {
-                                                String token = processorParts[i].trim();
+																// Check for duplicate keys before merging
+																Iterator<String> fieldNames = fromJsonNode.fieldNames();
+																while (fieldNames.hasNext()) {
+																	String fieldName = fieldNames.next();
+																	if (mergedInput.has(fieldName)) {
+																		throw new JobArgumentException(
+																				"Key conflict during input merge: "
+																						+ fieldName);
+																	}
+																}
 
-                                                if (token.equals("-r") || token.equals("--raw-output")) {
-                                                    rawOutput = true;
-                                                } else if ((token.equals(">") || token.equals(">>")) && i + 1 < processorParts.length) {
-                                                    String potentialFilePath = processorParts[i + 1].trim();
-                                                    if (potentialFilePath.startsWith("-")) {
-                                                        throw new JobArgumentException("Could not create return variable: " + name
-                                                                + ". Invalid file path: found flag instead of file name after '" + token + "'");
-                                                    }
-                                                    pI = token;
-                                                    filePath = potentialFilePath;
-                                                    i++;
-                                                } else if (token.matches("^[A-Za-z]:\\\\.*|^/.*")) {
-                                                    throw new JobArgumentException("File path provided without Processing Instruction (>, >>): "
-                                                            + token);
-                                                }
-                                            }
-                                        }
+																((ObjectNode) mergedInput)
+																		.setAll((ObjectNode) fromJsonNode);
 
-                                        // check if jq is not null
-                                        if (jqQuery != null && !jqQuery.trim().isEmpty()) {
-                                            JsonNode jqInput = null;
-                                            ObjectNode mergedInput = objectMapper.createObjectNode();
-                                            List<JsonNode> jqResult = null;
-                                            if (Objects.equals(inputType, "plain")) {
-                                                if (responseBody != null && !responseBody.trim().isEmpty()) {
-                                                    if (contentType != null && contentType.toLowerCase().startsWith("text/")) {
-                                                        try {
-                                                            jqInput = objectMapper.readTree("\"" + responseBody + "\"");
-                                                        } catch (Exception e) {
-                                                            throw new JobArgumentException("Could not convert plain response body to JSON string: "
-                                                                    + e.getMessage(), e);
-                                                        }
-                                                    } else {
-                                                        throw new JobArgumentException("Response body is not of content type text/*: " + contentType);
-                                                    }
-                                                } else {
-                                                    throw new JobException("Empty Response Body!");
-                                                }
-                                                jqResult = ReturnVariableUtils.runJqQuery(jqInput, jqQuery, rootScope, name);
-                                            } else {
-                                                List<String> inputOptions = null;
-                                                if (!inputOption.trim().isEmpty()) {
-                                                    inputOptions = ReturnVariableUtils.parseInputOptions(inputOption);
-                                                }
-                                                if (!inputOptions.isEmpty()) {
-                                                    if (responseBody != null && !responseBody.trim().isEmpty()) {
-                                                        if (contentType.contains("application/json")) {
-                                                            jqInput = objectMapper.readTree(responseBody);
-                                                            if (jqInput.isObject()) {
-                                                                mergedInput.setAll((ObjectNode) jqInput);
-                                                            }
-                                                        }
-                                                    }
-                                                    for (String opt : inputOptions) {
-                                                        if (opt.startsWith("--response-body") || opt.startsWith("-b"))
-                                                            continue;
-                                                        else if (opt.startsWith("--response-header") || opt.startsWith("-s")) {
-                                                            ObjectNode headerObject = objectMapper.createObjectNode();
-                                                            for (Map.Entry<String, String> entry : resHeaders.entrySet()) {
-                                                                headerObject.put(entry.getKey().toLowerCase(), entry.getValue());
-                                                            }
-                                                            mergedInput.set("js7ResponseHeader", headerObject);
-                                                        } else if (opt.startsWith("--request-header") || opt.startsWith("-q")) {
-                                                            ObjectNode headerObject = objectMapper.createObjectNode();
-                                                            for (Map.Entry<String, String> entry : headerMap.entrySet()) {
-                                                                headerObject.put(entry.getKey().toLowerCase(), entry.getValue());
-                                                            }
-                                                            mergedInput.set("js7RequestHeader", headerObject);
-                                                        } else if (opt.equals("--request-body") || opt.equals("-d")) {
-                                                            if (bodyStr != null && !bodyStr.trim().isEmpty()) {
-                                                                JsonNode requestBodyJson = objectMapper.readTree(bodyStr);
-                                                                if (!requestBodyJson.isObject()) {
-                                                                    throw new JobArgumentException("Request body must be a JSON object. Found: "
-                                                                            + requestBodyJson.getNodeType());
-                                                                }
-                                                                mergedInput.set("js7RequestBody", requestBodyJson);
-                                                            } else {
-                                                                throw new JobArgumentException("Empty/null Request body.");
-                                                            }
-                                                        } else if (opt.startsWith("--from-json=") || opt.startsWith("-j=")) {
-                                                            String jsonStr = opt.substring(opt.indexOf('=') + 1).trim();
+															} catch (Exception e) {
+																logger.error(
+																		"Invalid JSON for input option: " + jsonStr);
+																throw e;
+															}
+														} else {
+															throw new JobArgumentException(
+																	"Could not create return variable: " + name
+																			+ ". Unsupported input option: " + opt);
+														}
+														if (jqInput != null) {
+															if (!jqInput.isObject()) {
+																throw new JobArgumentException("Input from option ["
+																		+ opt + "] must be a JSON object. Found: "
+																		+ jqInput.getNodeType());
+															}
+															mergedInput.setAll((ObjectNode) jqInput);
+														}
+													}
+												} else {
+													if (responseBody != null && !responseBody.trim().isEmpty()) {
+														if (contentType.contains("application/json")) {
+															jqInput = objectMapper.readTree(responseBody);
+															if (!jqInput.isObject()) {
+																throw new JobArgumentException(
+																		"Response body must be a JSON object.");
+															}
+															mergedInput.setAll((ObjectNode) jqInput);
+														} else {
+															throw new JobArgumentException(
+																	"Could not create return variable: " + name
+																			+ " because response body is not in JSON format");
+														}
+													} else {
+														throw new JobArgumentException(
+																"Empty response body, could not create return variable: "
+																		+ name);
+													}
+												}
+												jqResult = ReturnVariableUtils.runJqQuery(mergedInput, jqQuery,
+														rootScope, name);
+											}
+											ReturnVariableUtils.writeToFile(step, logger, name, filePath, pI, jqResult,
+													rawOutput, objectMapper);
+										} else if (inputType.equals("plain")) {
+											if (contentType != null && contentType.toLowerCase().startsWith("text/"))
+												ReturnVariableUtils.writeToFile(step, logger, name, filePath, pI,
+														responseBody, rawOutput, objectMapper);
+											else
+												throw new JobArgumentException("Error in extracting return variable "
+														+ name + ", response body is not in text format.");
+										}
+									}
+								}
+							} else {
+								logger.error("return_variable is not a valid JSON array");
+								step.getOutcome().setReturnCode(1);
+							}
+						}
+					} catch (IOException e) {
+						throw new JobException("REST call failed due to I/O error: " + e.getMessage(), e);
+					} finally {
+						if (formData != null) {
+							formData.close();
+						}
+					}
+				}
+			}
+		} else {
+			throw new JobRequiredArgumentMissingException("Missing request JSON in job arguments.");
+		}
+	}
 
-                                                            // Handle optional quotes
-                                                            if ((jsonStr.startsWith("'") && jsonStr.endsWith("'")) || (jsonStr.startsWith("\"")
-                                                                    && jsonStr.endsWith("\""))) {
-                                                                jsonStr = jsonStr.substring(1, jsonStr.length() - 1);
-                                                            }
-
-                                                            try {
-                                                                JsonNode fromJsonNode = objectMapper.readTree(jsonStr);
-
-                                                                if (!fromJsonNode.isObject()) {
-                                                                    throw new JobArgumentException("Expected JSON object for --from-json, but found: "
-                                                                            + fromJsonNode.getNodeType());
-                                                                }
-
-                                                                // Check for duplicate keys before merging
-                                                                Iterator<String> fieldNames = fromJsonNode.fieldNames();
-                                                                while (fieldNames.hasNext()) {
-                                                                    String fieldName = fieldNames.next();
-                                                                    if (mergedInput.has(fieldName)) {
-                                                                        throw new JobArgumentException("Key conflict during input merge: "
-                                                                                + fieldName);
-                                                                    }
-                                                                }
-
-                                                                ((ObjectNode) mergedInput).setAll((ObjectNode) fromJsonNode);
-
-                                                            } catch (Exception e) {
-                                                                logger.error("Invalid JSON for input option: " + jsonStr);
-                                                                throw e;
-                                                            }
-                                                        } else {
-                                                            throw new JobArgumentException("Could not create return variable: " + name
-                                                                    + ". Unsupported input option: " + opt);
-                                                        }
-                                                        if (jqInput != null) {
-                                                            if (!jqInput.isObject()) {
-                                                                throw new JobArgumentException("Input from option [" + opt
-                                                                        + "] must be a JSON object. Found: " + jqInput.getNodeType());
-                                                            }
-                                                            mergedInput.setAll((ObjectNode) jqInput);
-                                                        }
-                                                    }
-                                                } else {
-                                                    if (responseBody != null && !responseBody.trim().isEmpty()) {
-                                                        if (contentType.contains("application/json")) {
-                                                            jqInput = objectMapper.readTree(responseBody);
-                                                            if (!jqInput.isObject()) {
-                                                                throw new JobArgumentException("Response body must be a JSON object.");
-                                                            }
-                                                            mergedInput.setAll((ObjectNode) jqInput);
-                                                        } else {
-                                                            throw new JobArgumentException("Could not create return variable: " + name
-                                                                    + " because response body is not in JSON format");
-                                                        }
-                                                    } else {
-                                                        throw new JobArgumentException("Empty response body, could not create return variable: "
-                                                                + name);
-                                                    }
-                                                }
-                                                jqResult = ReturnVariableUtils.runJqQuery(mergedInput, jqQuery, rootScope, name);
-                                            }
-                                            ReturnVariableUtils.writeToFile(step, logger, name, filePath, pI, jqResult, rawOutput, objectMapper);
-                                        } else if (inputType.equals("plain")) {
-                                            if (contentType != null && contentType.toLowerCase().startsWith("text/"))
-                                                ReturnVariableUtils.writeToFile(step, logger, name, filePath, pI, responseBody, rawOutput,
-                                                        objectMapper);
-                                            else
-                                                throw new JobArgumentException("Error in extracting return variable " + name
-                                                        + ", response body is not in text format.");
-                                        }
-                                    }
-                                }
-                            } else {
-                                logger.error("return_variable is not a valid JSON array");
-                                step.getOutcome().setReturnCode(1);
-                            }
-                        }
-                    } catch (IOException e) {
-                        throw new JobException("REST call failed due to I/O error: " + e.getMessage(), e);
-                    } finally {
-                        if (formData != null) {
-                            formData.close();
-                        }
-                    }
-                }
-            }
-        } else {
-            throw new JobRequiredArgumentMissingException("Missing request JSON in job arguments.");
-        }
-    }
-
-    static {
-        BuiltinFunctionLoader.getInstance().loadFunctions(Versions.JQ_1_7, rootScope);
-        objectMapper = (new ObjectMapper()).configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false).configure(
-                DeserializationFeature.FAIL_ON_READING_DUP_TREE_KEY, true).configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false).configure(
-                        SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS, false);
-    }
+	static {
+		BuiltinFunctionLoader.getInstance().loadFunctions(Versions.JQ_1_7, rootScope);
+		objectMapper = (new ObjectMapper()).configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false)
+				.configure(DeserializationFeature.FAIL_ON_READING_DUP_TREE_KEY, true)
+				.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false)
+				.configure(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS, false);
+	}
 }
